@@ -54,6 +54,11 @@ OpenDDS_Domain_Manager::OpenDDS_Domain_Manager (int & argc,
   if (CORBA::is_nil (dp_.in ()))
     throw Manager_Exception ("Failed to create domain participant.");
 
+  // create transport impl
+  OpenDDS::DCPS::TransportImpl_rch transport_impl =
+    OpenDDS::DCPS::TransportFactory::instance ()->create_transport_impl (
+      transport_impl_id_);
+
   // add a the handler for the SIGINT signal here
   ACE_Sig_Handler sig_handler;
   sig_handler.register_handler (SIGINT, &exit_handler_);
@@ -84,6 +89,11 @@ OpenDDS_Domain_Manager::OpenDDS_Domain_Manager (int & argc,
   // check for successful creation
   if (CORBA::is_nil (dp_.in ()))
     throw Manager_Exception ("Failed to create domain participant.");
+
+  // create transport impl
+  OpenDDS::DCPS::TransportImpl_rch transport_impl =
+    OpenDDS::DCPS::TransportFactory::instance ()->create_transport_impl (
+      transport_impl_id_);
 
   // add a the handler for the SIGINT signal here
   ACE_Sig_Handler sig_handler;
@@ -129,27 +139,12 @@ OpenDDS_Domain_Manager::subscription_manager (
   const Domain_Manager_Ptr & ref,
   const DDS::SubscriberQos & qos)
 {
-  if (transport_initialized_)
-    {
-      // only create new subscription manager that gets a transport impl id 
-      // the first time the method is called, since repeatedly registering a 
-      // transport would result in an error
-      return Subscription_Manager (
-               Subscription_Manager_Ptr (
-                 new OpenDDS_Subscription_Manager (Domain_Manager (ref), 
-						   qos)));
-    }
-  else
-    {
-      transport_initialized_ = true;
-
-      // use the simple constructor for consecutive calls of this method
-      return Subscription_Manager (
-               Subscription_Manager_Ptr (
-                 new OpenDDS_Subscription_Manager (Domain_Manager (ref), 
-			                           transport_impl_id_,
-						   qos)));
-    }
+  // use the simple constructor for consecutive calls of this method
+  return Subscription_Manager (
+    Subscription_Manager_Ptr (
+      new OpenDDS_Subscription_Manager (Domain_Manager (ref), 
+					transport_impl_id_,
+					qos)));
 }
 
 Subscription_Manager
@@ -166,27 +161,12 @@ Publication_Manager
 OpenDDS_Domain_Manager::publication_manager (const Domain_Manager_Ptr & ref,
 					     const DDS::PublisherQos & qos)
 {
-  if (transport_initialized_)
-    {
-      // only create new publication manager that gets a transport impl id the
-      // first time the method is called, since repeatedly registering a transport
-      // would result in an error
-      return Publication_Manager (
-               Publication_Manager_Ptr (
-                 new OpenDDS_Publication_Manager (Domain_Manager (ref),
-						  qos)));
-    }
-  else
-    {
-      transport_initialized_ = true;
-
-      // use the simple constructor for consecutive calls of this method
-      return Publication_Manager (
-               Publication_Manager_Ptr (
-                 new OpenDDS_Publication_Manager (Domain_Manager (ref),
-		     			          transport_impl_id_,
-						  qos)));
-    }
+  // use the simple constructor for consecutive calls of this method
+  return Publication_Manager (
+    Publication_Manager_Ptr (
+      new OpenDDS_Publication_Manager (Domain_Manager (ref),
+				       transport_impl_id_,
+				       qos)));
 }
 
 bool
