@@ -32,14 +32,6 @@
 #endif
 
 OpenDDS_Publication_Manager::OpenDDS_Publication_Manager (
- const Domain_Manager & dm,
- const DDS::PublisherQos & qos)
-  : dm_ (dm)
-{
-  this->init (qos);
-}
-
-OpenDDS_Publication_Manager::OpenDDS_Publication_Manager (
   const Domain_Manager & dm,
   OpenDDS::DCPS::TransportIdType transport_impl_id,
   const DDS::PublisherQos & qos)
@@ -72,9 +64,8 @@ OpenDDS_Publication_Manager::register_transport (OpenDDS::DCPS::TransportIdType 
 {
   // Initialize the transport
   OpenDDS::DCPS::TransportImpl_rch transport_impl =
-    OpenDDS::DCPS::TransportFactory::instance ()->create_transport_impl (
-      transport_id,
-      ::OpenDDS::DCPS::AUTO_CONFIG);
+    OpenDDS::DCPS::TransportFactory::instance ()->obtain (
+      transport_id);
 
   // Attach the publisher to the transport
   OpenDDS::DCPS::PublisherImpl* pub_impl =
