@@ -33,14 +33,6 @@
 
 OpenDDS_Subscription_Manager::OpenDDS_Subscription_Manager (
   const Domain_Manager & dm,
-  const DDS::SubscriberQos & qos)
-  : dm_ (dm)
-{
-  this->init (qos);
-}
-
-OpenDDS_Subscription_Manager::OpenDDS_Subscription_Manager (
-  const Domain_Manager & dm,
   OpenDDS::DCPS::TransportIdType transport_impl_id,
   const DDS::SubscriberQos & qos)
   : dm_ (dm)
@@ -80,9 +72,8 @@ OpenDDS_Subscription_Manager::register_transport (
 {
   // Initialize the transport
   OpenDDS::DCPS::TransportImpl_rch transport_impl =
-    OpenDDS::DCPS::TransportFactory::instance ()->create_transport_impl (
-      transport_id,
-      ::OpenDDS::DCPS::AUTO_CONFIG);
+    OpenDDS::DCPS::TransportFactory::instance ()->obtain (
+      transport_id);
 
   // Attach the subscriber to the transport.
   OpenDDS::DCPS::SubscriberImpl* sub_impl =
